--- a/app/templates/poke_team.html
+++ b/app/templates/poke_team.html
@@ -16,21 +16,15 @@
     <!-- if statement here that populates pokemon and stats -->
     <!-- connect results of api stats and post to db -->
     <!-- maybe rework feed code to update 5 bootstrap cards for the pokemon in the team from db -->
-    <!-- pokemon properties to include:
-        pokemon name 
-    from the stats section:
-        base stat for hp
-        base stat for defense
-        base stat for attack
-    from the sprites section:
-        front_shiny (URL to the image) or any other image you like more 
-    from the abilities section:
-        At Least One Ability
-    and any other properties you might find that interest you. -->
+
     {% if request.method == 'POST' %}
-            <p>Pokemon Name: {{ pk["Name"].title() }}</p>
+            <img src="{{ pk['Front Shiny'] }}">
+            <p>Pokemon Name: {{ pk["Name"].title() }}</p> 
             <p>HP: {{ pk["Base HP"] }}</p>
-            <p></p>
+            <p>ATK: {{ pk["Base ATK"] }}</p>
+            <p>DEF: {{ pk["Base DEF"] }}</p>
+            <br>
+            <p>Ability: {{ pk["Ability"].title() }}</p>
     {% endif %}
 
     {% endblock %}
