--- a/app/templates/poke_team.html
+++ b/app/templates/poke_team.html
@@ -5,7 +5,6 @@
     <h1>PokeDex</h1>
 
     <form method="POST" class="container col-4">
-        {{ form.hidden_tag() }}
 
         {{ form.pokemon(class='form-control', placeholder='Pokemon name or number') }}
         {{ form.submit(class='btn btn-primary') }}
@@ -23,6 +22,7 @@
             <p>HP: {{ pk["Base HP"] }}</p>
             <p>ATK: {{ pk["Base ATK"] }}</p>
             <p>DEF: {{ pk["Base DEF"] }}</p>
+            <p>SPD: {{ pk["Base SPD"] }}</p>
             <br>
             <p>Ability: {{ pk["Ability"].title() }}</p>
     {% endif %}
