backend functions finished, some CSS

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,7 +13,8 @@
 <title>POKE PC</title>
 </head>
 <body>
-<!-- add nav if statement for after login -->
+    {% include 'nav.html' %}
+    
     {% block content %}
 
 
