--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 
-    <h1>Sign Up Page</h1>
+    <h1>Sign Up</h1>
 
     <form method="POST" class="container col-4">
         {{ form.hidden_tag() }}
