--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -13,8 +13,20 @@
 <title>POKE PC</title>
 </head>
 <body>
+    <div style="text-align: center;">
+        <img style="display: block; margin: 0 auto;" src="{{ url_for('static', filename='pokemon-logo-bw.png') }}" alt="logo">
+    </div>
     {% include 'nav.html' %}
-    
+    {% with messages = get_flashed_messages(with_categories=True) %}
+        {% if messages %}
+            {% for c, m in messages %}
+                <div class="alert alert-{{ c }} alert-dismissible fade show" role="alert">
+                    {{ m }}
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     {% block content %}
 
 
