can view your team

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <div style="text-align: center;">
-        <img style="display: block; margin: 0 auto;" src="{{ url_for('static', filename='pokemon-logo-bw.png') }}" alt="logo">
+        <img style="display: block; margin: 0 auto;" src="{{ url_for('static', filename='banner.jpg') }}" alt="logo">
     </div>
     {% include 'nav.html' %}
     {% with messages = get_flashed_messages(with_categories=True) %}
