--- a/app/static/main.css
+++ b/app/static/main.css
@@ -8,10 +8,23 @@ body {
     background-color: black;
     color: white;
 }
+.navbar{
+    font-size:large;
+}
+.navbar-brand{
+    font-size:x-large;
+}
 .navbar a {
     color: red;
 }
-
+.hero-image{
+    background-image:linear-gradient(rgba(0,0,0,.5),rgba(0,0,0,0.5));
+    height: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
 .pokedex{
     background-color: red;
     padding: 20px;
@@ -39,9 +52,10 @@ body {
 h1 {
     text-align: center;
     margin-top: 35px;
+    margin-bottom: 35px;
 }
 
 img {
-    width: 400px;
-    height: 200px;
+    width: 100%;
+    height: 300px;
 }
