--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-center">
     <nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Shiny PokeDex</a>
+            <a class="navbar-brand" href="/myTeam">Shiny PokeDex</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -10,7 +10,10 @@
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/pokedex">Home</a>
+                        <a class="nav-link active" aria-current="page" href="/myTeam">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/pokedex">Pokedex</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/logout">Log Out</a>
